assignments/PA3/cool.output
Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: dummy_class_list

    2 dummy_class_list: class
    3                 | dummy_class_list class

    4 class: CLASS TYPEID '{' dummy_feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'
    6      | error ';'

    7 dummy_feature_list: ε
    8                   | dummy_feature_list feature

    9 feature: OBJECTID '(' dummy_formal_list ')' ':' TYPEID '{' expression '}' ';'
   10        | OBJECTID '(' ')' ':' TYPEID '{' expression '}' ';'
   11        | OBJECTID ':' TYPEID ASSIGN expression ';'
   12        | OBJECTID ':' TYPEID ';'
   13        | error ';'

   14 dummy_formal_list: dummy_formal_list ',' formal
   15                  | formal

   16 formal: OBJECTID ':' TYPEID

   17 expression: OBJECTID ASSIGN expression
   18           | expression '@' TYPEID '.' OBJECTID '(' dummy_expression_list ')'
   19           | expression '.' OBJECTID '(' dummy_expression_list ')'
   20           | expression '.' OBJECTID '(' ')'
   21           | OBJECTID '(' dummy_expression_list ')'
   22           | OBJECTID '(' ')'
   23           | IF expression THEN expression ELSE expression FI
   24           | WHILE expression LOOP expression POOL
   25           | '{' dummy_block_expression_list '}'
   26           | LET dummy_let_expression
   27           | CASE expression OF dummy_case_list ESAC
   28           | ISVOID expression
   29           | NEW TYPEID
   30           | expression '+' expression
   31           | expression '-' expression
   32           | expression '*' expression
   33           | expression '/' expression
   34           | '~' expression
   35           | expression '<' expression
   36           | expression LE expression
   37           | expression '=' expression
   38           | NOT expression
   39           | '(' expression ')'
   40           | OBJECTID
   41           | INT_CONST
   42           | BOOL_CONST
   43           | STR_CONST

   44 dummy_expression_list: dummy_expression_list ',' expression
   45                      | expression

   46 dummy_block_expression_list: dummy_block_expression_list expression ';'
   47                            | expression ';'
   48                            | error ';'

   49 dummy_let_expression: OBJECTID ':' TYPEID ASSIGN expression IN expression
   50                     | OBJECTID ':' TYPEID IN expression
   51                     | OBJECTID ':' TYPEID ASSIGN expression ',' dummy_let_expression
   52                     | OBJECTID ':' TYPEID ',' dummy_let_expression
   53                     | error dummy_let_expression

   54 dummy_case_list: OBJECTID ':' TYPEID DARROW expression ';'
   55                | OBJECTID ':' TYPEID DARROW expression ';' dummy_case_list


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 9 10 18 19 20 21 22 39
    ')' (41) 9 10 18 19 20 21 22 39
    '*' (42) 32
    '+' (43) 30
    ',' (44) 14 44 51 52
    '-' (45) 31
    '.' (46) 18 19 20
    '/' (47) 33
    ':' (58) 9 10 11 12 16 49 50 51 52 54 55
    ';' (59) 4 5 6 9 10 11 12 13 46 47 48 54 55
    '<' (60) 35
    '=' (61) 37
    '@' (64) 18
    '{' (123) 4 5 9 10 25
    '}' (125) 4 5 9 10 25
    '~' (126) 34
    error (256) 6 13 48 53
    CLASS (258) 4 5
    ELSE (259) 23
    FI (260) 23
    IF (261) 23
    IN (262) 49 50
    INHERITS (263) 5
    LET (264) 26
    LOOP (265) 24
    POOL (266) 24
    THEN (267) 23
    WHILE (268) 24
    CASE (269) 27
    ESAC (270) 27
    OF (271) 27
    DARROW (272) 54 55
    NEW (273) 29
    ISVOID (274) 28
    STR_CONST <symbol> (275) 43
    INT_CONST <symbol> (276) 41
    BOOL_CONST <boolean> (277) 42
    TYPEID <symbol> (278) 4 5 9 10 11 12 16 18 29 49 50 51 52 54 55
    OBJECTID <symbol> (279) 9 10 11 12 16 17 18 19 20 21 22 40 49 50 51 52 54 55
    ASSIGN (280) 11 17 49 51
    NOT (281) 38
    LE (282) 36
    ERROR (283)
    EXTEND_LET_EXPR (285)


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    program <program> (47)
        on left: 1
        on right: 0
    dummy_class_list <classes> (48)
        on left: 2 3
        on right: 1 3
    class <class_> (49)
        on left: 4 5 6
        on right: 2 3
    dummy_feature_list <features> (50)
        on left: 7 8
        on right: 4 5 8
    feature <feature> (51)
        on left: 9 10 11 12 13
        on right: 8
    dummy_formal_list <formals> (52)
        on left: 14 15
        on right: 9 14
    formal <formal> (53)
        on left: 16
        on right: 14 15
    expression <expression> (54)
        on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
        on right: 9 10 11 17 18 19 20 23 24 27 28 30 31 32 33 34 35 36 37 38 39 44 45 46 47 49 50 51 54 55
    dummy_expression_list <expressions> (55)
        on left: 44 45
        on right: 18 19 21 44
    dummy_block_expression_list <expressions> (56)
        on left: 46 47 48
        on right: 25 46
    dummy_let_expression <expression> (57)
        on left: 49 50 51 52 53
        on right: 26 51 52 53
    dummy_case_list <cases> (58)
        on left: 54 55
        on right: 27 55


State 0

    0 $accept: • program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program           go to state 3
    dummy_class_list  go to state 4
    class             go to state 5


State 1

    6 class: error • ';'

    ';'  shift, and go to state 6


State 2

    4 class: CLASS • TYPEID '{' dummy_feature_list '}' ';'
    5      | CLASS • TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program • $end

    $end  shift, and go to state 8


State 4

    1 program: dummy_class_list •
    3 dummy_class_list: dummy_class_list • class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 dummy_class_list: class •

    $default  reduce using rule 2 (dummy_class_list)


State 6

    6 class: error ';' •

    $default  reduce using rule 6 (class)


State 7

    4 class: CLASS TYPEID • '{' dummy_feature_list '}' ';'
    5      | CLASS TYPEID • INHERITS TYPEID '{' dummy_feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end •

    $default  accept


State 9

    3 dummy_class_list: dummy_class_list class •

    $default  reduce using rule 3 (dummy_class_list)


State 10

    5 class: CLASS TYPEID INHERITS • TYPEID '{' dummy_feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' • dummy_feature_list '}' ';'

    $default  reduce using rule 7 (dummy_feature_list)

    dummy_feature_list  go to state 13


State 12

    5 class: CLASS TYPEID INHERITS TYPEID • '{' dummy_feature_list '}' ';'

    '{'  shift, and go to state 14


State 13

    4 class: CLASS TYPEID '{' dummy_feature_list • '}' ';'
    8 dummy_feature_list: dummy_feature_list • feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 17

    feature  go to state 18


State 14

    5 class: CLASS TYPEID INHERITS TYPEID '{' • dummy_feature_list '}' ';'

    $default  reduce using rule 7 (dummy_feature_list)

    dummy_feature_list  go to state 19


State 15

   13 feature: error • ';'

    ';'  shift, and go to state 20


State 16

    9 feature: OBJECTID • '(' dummy_formal_list ')' ':' TYPEID '{' expression '}' ';'
   10        | OBJECTID • '(' ')' ':' TYPEID '{' expression '}' ';'
   11        | OBJECTID • ':' TYPEID ASSIGN expression ';'
   12        | OBJECTID • ':' TYPEID ';'

    '('  shift, and go to state 21
    ':'  shift, and go to state 22


State 17

    4 class: CLASS TYPEID '{' dummy_feature_list '}' • ';'

    ';'  shift, and go to state 23


State 18

    8 dummy_feature_list: dummy_feature_list feature •

    $default  reduce using rule 8 (dummy_feature_list)


State 19

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list • '}' ';'
    8 dummy_feature_list: dummy_feature_list • feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 24

    feature  go to state 18


State 20

   13 feature: error ';' •

    $default  reduce using rule 13 (feature)


State 21

    9 feature: OBJECTID '(' • dummy_formal_list ')' ':' TYPEID '{' expression '}' ';'
   10        | OBJECTID '(' • ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 25
    ')'       shift, and go to state 26

    dummy_formal_list  go to state 27
    formal             go to state 28


State 22

   11 feature: OBJECTID ':' • TYPEID ASSIGN expression ';'
   12        | OBJECTID ':' • TYPEID ';'

    TYPEID  shift, and go to state 29


State 23

    4 class: CLASS TYPEID '{' dummy_feature_list '}' ';' •

    $default  reduce using rule 4 (class)


State 24

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' • ';'

    ';'  shift, and go to state 30


State 25

   16 formal: OBJECTID • ':' TYPEID

    ':'  shift, and go to state 31


State 26

   10 feature: OBJECTID '(' ')' • ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 32


State 27

    9 feature: OBJECTID '(' dummy_formal_list • ')' ':' TYPEID '{' expression '}' ';'
   14 dummy_formal_list: dummy_formal_list • ',' formal

    ')'  shift, and go to state 33
    ','  shift, and go to state 34


State 28

   15 dummy_formal_list: formal •

    $default  reduce using rule 15 (dummy_formal_list)


State 29

   11 feature: OBJECTID ':' TYPEID • ASSIGN expression ';'
   12        | OBJECTID ':' TYPEID • ';'

    ASSIGN  shift, and go to state 35
    ';'     shift, and go to state 36


State 30

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';' •

    $default  reduce using rule 5 (class)


State 31

   16 formal: OBJECTID ':' • TYPEID

    TYPEID  shift, and go to state 37


State 32

   10 feature: OBJECTID '(' ')' ':' • TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 38


State 33

    9 feature: OBJECTID '(' dummy_formal_list ')' • ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 39


State 34

   14 dummy_formal_list: dummy_formal_list ',' • formal

    OBJECTID  shift, and go to state 25

    formal  go to state 40


State 35

   11 feature: OBJECTID ':' TYPEID ASSIGN • expression ';'

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 55


State 36

   12 feature: OBJECTID ':' TYPEID ';' •

    $default  reduce using rule 12 (feature)


State 37

   16 formal: OBJECTID ':' TYPEID •

    $default  reduce using rule 16 (formal)


State 38

   10 feature: OBJECTID '(' ')' ':' TYPEID • '{' expression '}' ';'

    '{'  shift, and go to state 56


State 39

    9 feature: OBJECTID '(' dummy_formal_list ')' ':' • TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 57


State 40

   14 dummy_formal_list: dummy_formal_list ',' formal •

    $default  reduce using rule 14 (dummy_formal_list)


State 41

   23 expression: IF • expression THEN expression ELSE expression FI

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 58


State 42

   26 expression: LET • dummy_let_expression

    error     shift, and go to state 59
    OBJECTID  shift, and go to state 60

    dummy_let_expression  go to state 61


State 43

   24 expression: WHILE • expression LOOP expression POOL

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 62


State 44

   27 expression: CASE • expression OF dummy_case_list ESAC

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 63


State 45

   29 expression: NEW • TYPEID

    TYPEID  shift, and go to state 64


State 46

   28 expression: ISVOID • expression

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 65


State 47

   43 expression: STR_CONST •

    $default  reduce using rule 43 (expression)


State 48

   41 expression: INT_CONST •

    $default  reduce using rule 41 (expression)


State 49

   42 expression: BOOL_CONST •

    $default  reduce using rule 42 (expression)


State 50

   17 expression: OBJECTID • ASSIGN expression
   21           | OBJECTID • '(' dummy_expression_list ')'
   22           | OBJECTID • '(' ')'
   40           | OBJECTID •

    ASSIGN  shift, and go to state 66
    '('     shift, and go to state 67

    $default  reduce using rule 40 (expression)


State 51

   38 expression: NOT • expression

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 68


State 52

   34 expression: '~' • expression

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 69


State 53

   25 expression: '{' • dummy_block_expression_list '}'

    error       shift, and go to state 70
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression                   go to state 71
    dummy_block_expression_list  go to state 72


State 54

   39 expression: '(' • expression ')'

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 73


State 55

   11 feature: OBJECTID ':' TYPEID ASSIGN expression • ';'
   18 expression: expression • '@' TYPEID '.' OBJECTID '(' dummy_expression_list ')'
   19           | expression • '.' OBJECTID '(' dummy_expression_list ')'
   20           | expression • '.' OBJECTID '(' ')'
   30           | expression • '+' expression
   31           | expression • '-' expression
   32           | expression • '*' expression
   33           | expression • '/' expression
   35           | expression • '<' expression
   36           | expression • LE expression
   37           | expression • '=' expression

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82
    ';'  shift, and go to state 83


State 56

   10 feature: OBJECTID '(' ')' ':' TYPEID '{' • expression '}' ';'

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 84


State 57

    9 feature: OBJECTID '(' dummy_formal_list ')' ':' TYPEID • '{' expression '}' ';'

    '{'  shift, and go to state 85


State 58

   18 expression: expression • '@' TYPEID '.' OBJECTID '(' dummy_expression_list ')'
   19           | expression • '.' OBJECTID '(' dummy_expression_list ')'
   20           | expression • '.' OBJECTID '(' ')'
   23           | IF expression • THEN expression ELSE expression FI
   30           | expression • '+' expression
   31           | expression • '-' expression
   32           | expression • '*' expression
   33           | expression • '/' expression
   35           | expression • '<' expression
   36           | expression • LE expression
   37           | expression • '=' expression

    THEN  shift, and go to state 86
    LE    shift, and go to state 74
    '<'   shift, and go to state 75
    '='   shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '@'   shift, and go to state 81
    '.'   shift, and go to state 82


State 59

   53 dummy_let_expression: error • dummy_let_expression

    error     shift, and go to state 59
    OBJECTID  shift, and go to state 60

    dummy_let_expression  go to state 87


State 60

   49 dummy_let_expression: OBJECTID • ':' TYPEID ASSIGN expression IN expression
   50                     | OBJECTID • ':' TYPEID IN expression
   51                     | OBJECTID • ':' TYPEID ASSIGN expression ',' dummy_let_expression
   52                     | OBJECTID • ':' TYPEID ',' dummy_let_expression

    ':'  shift, and go to state 88


State 61

   26 expression: LET dummy_let_expression •

    $default  reduce using rule 26 (expression)


State 62

   18 expression: expression • '@' TYPEID '.' OBJECTID '(' dummy_expression_list ')'
   19           | expression • '.' OBJECTID '(' dummy_expression_list ')'
   20           | expression • '.' OBJECTID '(' ')'
   24           | WHILE expression • LOOP expression POOL
   30           | expression • '+' expression
   31           | expression • '-' expression
   32           | expression • '*' expression
   33           | expression • '/' expression
   35           | expression • '<' expression
   36           | expression • LE expression
   37           | expression • '=' expression

    LOOP  shift, and go to state 89
    LE    shift, and go to state 74
    '<'   shift, and go to state 75
    '='   shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '@'   shift, and go to state 81
    '.'   shift, and go to state 82


State 63

   18 expression: expression • '@' TYPEID '.' OBJECTID '(' dummy_expression_list ')'
   19           | expression • '.' OBJECTID '(' dummy_expression_list ')'
   20           | expression • '.' OBJECTID '(' ')'
   27           | CASE expression • OF dummy_case_list ESAC
   30           | expression • '+' expression
   31           | expression • '-' expression
   32           | expression • '*' expression
   33           | expression • '/' expression
   35           | expression • '<' expression
   36           | expression • LE expression
   37           | expression • '=' expression

    OF   shift, and go to state 90
    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82


State 64

   29 expression: NEW TYPEID •
